--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -4,6 +4,10 @@
 .selectize-dropdown .option {
   cursor: pointer;
 }
+// Make selectize boxes the same height as other form controls
+.selectize-control.form-control .selectize-input {
+  line-height: 1.5;
+}
 
 // General styles
 @import "../stylesheets/utils";
