--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -92,7 +92,8 @@
     .col-6.col-md-4.col-lg-3
       .form-group
         = f.label :manufacturer_other do
-          Other mnfg
+          %span.d-none.d-sm-inline
+            Other mnfg
           %small.less-strong
             %span.d-none.d-xl-inline
               Only necessary
