--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -16,7 +16,7 @@
       %span.navbar-brand
         = link_to (image_tag("logo.svg")), admin_root_path
       - if current_user.superuser?
-        %ul.navbar-nav.d-none.d-md-flex
+        %ul.navbar-nav.d-none.d-lg-flex
           %li.nav-item
             = active_link "Users", admin_users_path, role: "button", class: "nav-link users", match_controller: true
           %li.nav-item
@@ -39,7 +39,7 @@
         - if admin_nav_display_view_all
           = link_to admin_nav_select_link_active[:path], class: "nav-link text-muted em" do
             All
-            .d-none.d-sm-inline-block.d-md-none.d-xl-inline-block
+            .d-none.d-sm-inline-block.d-lg-none.d-xl-inline-block
               = admin_nav_select_link_active[:title]
         .fancy-select.unfancy.no-restore-on-backspace
           = select(:admin, :other_navigation, options_for_select(admin_nav_select_links.map { |l| [l[:title], l[:path]] }), { prompt: admin_nav_select_prompt }, { class: "form-control" })
