--- a/app/views/landing_pages/_next_steps_contact.html.haml
+++ b/app/views/landing_pages/_next_steps_contact.html.haml
@@ -1,6 +1,6 @@
 = form_for @feedback, html: { class: 'organized-form' } do |f|
   .form-group
-    = f.label :name, 'Organization name', class: 'form-label'
+    = f.label :name, t(".organization_name"), class: 'form-label'
     = f.text_field :name, required: true, class: 'form-control'
   - unless current_user.present?
     .form-group
@@ -10,10 +10,10 @@
     = f.label :additional, class: 'form-label'
     = f.text_field :additional, class: 'form-control'
   .form-group
-    = f.label :body, 'Message', class: 'form-label'
+    = f.label :body, t(".message"), class: 'form-label'
     = f.text_area :body, class: 'form-control'
 
   = f.hidden_field :feedback_type, value: "lead_for_#{landing_page_target}"
 
-  = f.submit 'Get in touch', class: 'btn btn-primary btn-lg'
+  = f.submit t(".get_in_touch"), class: 'btn btn-primary btn-lg'
     
