Externalize layout strings, Add cache helper (#967)
Adds a CacheHelper#cache method, which adds the current locale to cache keys. Resolves an issue where a cached fragment in one locale is displayed when a different locale is selected.

Externalizes strings for the following templates in app/views/layouts:

_grid.html.erb
_messages.html.haml
_messages_u.html.haml
_revised_messages.html.haml
application.html.haml
application_revised.html.haml
application_revised_bikehub.html.haml
email.html.haml
embed_layout.html.haml
embed_user_layout.html.haml
payments_layout.html.haml
reg_embed.html.haml

--- a/app/views/layouts/_revised_messages.html.haml
+++ b/app/views/layouts/_revised_messages.html.haml
@@ -1,20 +1,21 @@
-/ Note: 
-/   We primarily use 3 flash types - success, error, and notice
-/   success - No actionable info. Basically, Bike Index did what you asked. Auto faded
-/   error   - Messages because you did something wrong. Not faded
-/   notice  - Messages that don't fit in the above categories. Not faded, may have actionable info
+-# Note:
+-# -----
+-# We primarily use 3 flash types - success, error, and notice
+-# success - No actionable info. Basically, Bike Index did what you asked. Auto faded
+-# error   - Messages because you did something wrong. Not faded
+-# notice  - Messages that don't fit in the above categories. Not faded, may have actionable info
+
 .primary-alert-block
   - flash.each do |name, msg|
-    = render partial: '/shared/alert', locals: { body: msg, type: name }
+    = render partial: "/shared/alert", locals: { body: msg, type: name }
 
   - if @page_errors.present? # Primarily used for form object errors
-    - title = "Please fix the following #{pluralize(@page_errors.count, 'error')}"
+    - title = t(".please_fix_the_following", errors: pluralize(@page_errors.count, t(".error")))
     - error_body = capture_haml do
       %ul
         - @page_errors = @page_errors.full_messages if @page_errors.is_a?(ActiveModel::Errors)
         - @page_errors.each do |msg|
-          %li
-            = msg
+          %li= msg
     = render partial: '/shared/alert', locals: { body: error_body, title: title }
 
 :plain
