--- a/app/views/landing_pages/campus_packages.html.haml
+++ b/app/views/landing_pages/campus_packages.html.haml
@@ -91,11 +91,7 @@
       = render partial: "/landing_pages/packages_list", locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: true }
 
     %p.mt-4
-      %em.less-strong
-        A la carte features and custom development available.
-        %a.tryPaidButton{ href: "#" }
-          Get in touch
-        to find out more
+      = render partial: "landing_pages/find_out_more"
 
   .contact-us-callout-wrapper
     .contact-us-callout
