Add FontAwesome chevrons

--- a/app/assets/stylesheets/revised/pages/landing/_packages.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_packages.scss
@@ -123,6 +123,7 @@ $compare-packages-blue: rgb(19, 71, 106);
     text-align: left;
   }
   .showPlanFeatures {
+    text-decoration: none;
     span {
       margin: 6px 0;
       width: 100%;
