--- a/app/views/landing_pages/_packages_list.html.haml
+++ b/app/views/landing_pages/_packages_list.html.haml
@@ -31,8 +31,10 @@
         %a.showPlanFeatures.collapsed{ href: "##{plan}_features", "aria-controls" => "#{plan}_features", "data-toggle" => "collapse" }
           %span.uncollapsed
             See Features >
+            %i.fas.fa-chevron-down
           %span.incollapsed
             Hide Features ^
+            %i.fas.fa-chevron-up
         %ul.collapse{ id: "#{plan}_features" }
           - plan_features.each do |feature|
             - next unless feature[plan].present?
