--- a/app/views/landing_pages/bike_shop_packages.html.haml
+++ b/app/views/landing_pages/bike_shop_packages.html.haml
@@ -3,36 +3,35 @@
 :ruby
   plans = {
     free: { cost: 0, subhead: nil },
-    supporting: { cost: 199, subhead: "Supporting Shop" }
+    supporting: { cost: 199, subhead: t(".supporting_shop")}
   }
   plan_sizes = plans.keys
   plan_features = [
-    { free: true, supporting: true, title: "Supporting our nonprofit" },
-    { free: true, supporting: true, title: "Create organization account and contact registrants" },
-    { free: true, supporting: true, title: "Embed a registration form on your website so people can register in your organization accout" },
-    { free: true, supporting: true, title: "Automatic registration through your POS" },
-    { free: true, supporting: true, title: "Social Media and Email marketing campaign assets" },
-    { free: false, supporting: true, title: "Search bikes in organization account" },
-    { free: false, supporting: true, title: "Import CSV file of registrations from former system" },
-    { free: false, supporting: true, title: "Welcome campaign on Facebook, Twitter, and Instagram." },
+    { free: true,  supporting: true, title: t("plan_features.supporting_our_nonprofit")},
+    { free: true,  supporting: true, title: t("plan_features.create_organization_account")},
+    { free: true,  supporting: true, title: t("plan_features.embed_a_registration_form")},
+    { free: true,  supporting: true, title: t("plan_features.automatic_registration_through_pos")},
+    { free: true,  supporting: true, title: t("plan_features.social_media_and_email_marketing")},
+    { free: false, supporting: true, title: t("plan_features.search_bikes_in_organization")},
+    { free: false, supporting: true, title: t("plan_features.import_csv_file")},
+    { free: false, supporting: true, title: t("plan_features.welcome_campaign")},
   ]
 
 .signup-landing-page.signup-landing-page-packages.signup-landing-page-shop-packages
   %header.banner-header
     .container
       .packages-main-title
-        %h1
-          Bike Index for bike shops
-        %h2
-          Simply the best bike registry
+        %h1= t(".bike_index_for_bike_shops")
+        %h2= t(".simply_the_best_bike_registry")
 
-      / Because there are so few packages, manually set the smaller number of them
+      -# Because there are so few packages, manually set the smaller number of them
       %ul.packages-price-list{ style: "justify-content: space-evenly;" }
-        = render partial: "/landing_pages/packages_list", locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: false }
+        = render partial: "/landing_pages/packages_list",
+        locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: false }
 
   .container.main-compare-packages-container
-    %h2.header-font-uncap
-      Compare Plans and Features
+    %h2.header-font-uncap= t(".compare_plans_and_features")
+
     %table.table.compare-packages-table.table-striped
       %thead
         %tr
@@ -40,30 +39,24 @@
           %th
             - plans.each do |plan, plan_data|
               - if plan == :free
-                %h4
-                  Free
-                %h3
-                  $0
-                %p
-                  Forever
-                %a.btn.btn-primary{ href: new_organization_path }
-                  Sign Up Now
+                %h4= t(".free")
+                %h3= number_to_currency(0, precision: 0)
+                %p= t(".forever")
+                = link_to t(".sign_up_now"), new_organization_path , class: "btn btn-primary"
               - else
                 %th
-                  %h4
-                    #{plan.to_s.titleize} #{lead_type}
-                  %h3
-                    $#{number_with_delimiter(plan_data[:cost])}
+                  %h4 #{plan.to_s.titleize} #{lead_type}
+                  %h3= number_to_currency(plan_data[:cost], precision: 0)
                   %p
-                    (USD/annually)
-                  %a.btn.btn-primary.tryPaidButton{ href: "#", "data-plan" => plan.to_s }
-                    Try For Free
+                    = t("number.currency.alphabetic_code")
+                    = "/"
+                    = t(".year")
+                  = link_to t(".try_for_free"), nil , class: "btn btn-primary tryPaidButton", data: {plan: plan.to_s}
 
       %tbody
         - plan_features.each do |feature|
           %tr
-            %td
-              = feature[:title]
+            %td= feature[:title]
             - plan_sizes.each do |size|
               %td
                 - if feature[size].is_a?(String)
@@ -78,41 +71,48 @@
 
 
     %ul.packages-price-list-small-screens
-      = render partial: "/landing_pages/packages_list", locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: true }
+      = render partial: "/landing_pages/packages_list",
+      locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: true }
 
     %p.mt-4
       = render partial: "landing_pages/find_out_more"
 
   .contact-us-callout-wrapper
     .contact-us-callout
-      Questions? Want to get started?
-      = link_to "Contact us", "#", class: "btn btn-primary tryPaidButton"
+      = t(".questions_want_to_get_started")
+      = link_to t(".contact_us"), "#", class: "btn btn-primary tryPaidButton"
 
 - modal_body = capture_haml do
   = form_for @feedback, html: { class: 'organized-form' } do |f|
     .modal-body
       .form-group.currently-hidden
-        - package_opts = plan_sizes.map { |s| ["#{s.to_s.titleize} package", s] }
-        = f.select(:package_size, package_opts, { prompt: "Choose a package size" }, { class: "form-control" })
+        - package_opts = plan_sizes.map { |s| [t(".package_title", name: s.to_s.titleize), s] }
+        = f.select(:package_size, package_opts, { prompt: t(".choose_a_package_size") }, { class: "form-control" })
+
       .form-group
         = f.label :name, lead_type.titleize, class: "form-label"
         = f.text_field :name, required: true, class: "form-control"
+
       .form-group
         = f.label :phone_number, class: "form-label"
         = f.text_field :phone_number, class: "form-control"
+
       .form-group
         = f.label :email, class: "form-label"
         = f.email_field :email, value: current_user&.email, required: true, class: "form-control"
+
       .form-group.additional-field
-        = f.label :additional, "Additional", class: "form-label"
+        = f.label :additional, t(".additional"), class: "form-label"
         = f.text_area :additional, class: "form-control"
+
       - if @feedback.errors.present?
         .form-group.additional-field
           = f.text_area :body,  class: "form-control", rows: 2, required: true
       - else
         = f.hidden_field :body
+
       = f.hidden_field :feedback_type, value: "lead_for_#{lead_type}"
 
-      = f.submit "Sign up", class: "btn btn-primary btn-lg"
+      = f.submit t(".sign_up"), class: "btn btn-primary btn-lg"
 
-= render partial: '/shared/modal', locals: { title: "Contact us for a free trial", id: "organizationSignupModal", modal_body: modal_body, start_open: @page_errors }
+= render partial: '/shared/modal', locals: { title: t(".contact_us_for_trial"), id: "organizationSignupModal", modal_body: modal_body, start_open: @page_errors }
