--- a/app/views/landing_pages/campus_packages.html.haml
+++ b/app/views/landing_pages/campus_packages.html.haml
@@ -3,10 +3,10 @@
 :ruby
   plans = {
     free: { cost: 0, subhead: nil },
-    supporting: { cost: 299, subhead: "Keep us pedaling" },
-    small: { cost: 3999, subhead: "0-10k Members" },
-    medium: { cost: 5999, subhead: "10k-20k Members", popular: true },
-    large: { cost: 8999, subhead: "20k+ Members" },
+    supporting: { cost: 299, subhead: t(".keep_us_pedaling")},
+    small: { cost: 3999, subhead: t(".num_members", range: "0-10k") },
+    medium: { cost: 5999, subhead: t(".num_members", range: "10k-20k"), popular: true },
+    large: { cost: 8999, subhead: t(".num_members", range: "20k+") },
   }
   plan_sizes = plans.keys
   plan_features = [
@@ -32,17 +32,18 @@
     .container
       .packages-main-title
         %h1
-          Bike Index for Colleges & Universities
+          = t(".bike_index_for_colleges_universities")
         %h2
-          Clean up your Campus' messy registry.
+          = t(".clean_up_your_campus_messy_registry")
           %br
-          All plans come with a 30-day free trial
+          = t(".all_plans_come_with_a_30day_free_trial")
       %ul.packages-price-list
-        = render partial: "/landing_pages/packages_list", locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: false }
+        = render partial: "/landing_pages/packages_list",
+        locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: false }
 
   .container.main-compare-packages-container
     %h2.header-font-uncap
-      Compare Plans and Features
+      = t(".compare_plans_and_features")
     %table.table.compare-packages-table.table-striped
       %thead
         %tr
@@ -50,31 +51,25 @@
           %th
             - plans.each do |plan, plan_data|
               - if plan == :free
-                %h4
-                  Free
-                %h3
-                  $0
-                %p
-                  Forever
-                %a.btn.btn-primary{ href: new_organization_path }
-                  Sign Up Now
+                %h4= t(".free")
+                %h3= number_to_currency(0, precision: 0)
+                %p= t(".forever")
+                = link_to t(".sign_up_now"), new_organization_path , class: "btn btn-primary"
               - else
                 %th
-                  %h4
-                    #{plan.to_s.titleize} #{lead_type}
+                  %h4 #{plan.to_s.titleize} #{lead_type}
                   %h3= number_to_currency(plan_data[:cost], precision: 0)
                   %p
                     = t("number.currency.alphabetic_code")
                     = "/"
                     = t(".year")
                   %a.btn.btn-primary.tryPaidButton{ href: "#", "data-plan" => plan.to_s }
-                    Try For Free
+                    = t(".try_for_free")
 
       %tbody
         - plan_features.each do |feature|
           %tr
-            %td
-              = feature[:title]
+            %td= feature[:title]
             - plan_sizes.each do |size|
               %td
                 - if feature[size].is_a?(String)
@@ -89,7 +84,7 @@
 
 
     %ul.packages-price-list-small-screens
-      = render partial: "/landing_pages/packages_list",
+      = render partial: "landing_pages/packages_list"
       locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: true }
 
     %p.mt-4
@@ -97,15 +92,15 @@
 
   .contact-us-callout-wrapper
     .contact-us-callout
-      Questions? Want to get started?
-      = link_to "Contact us", "#", class: "btn btn-primary tryPaidButton"
+      = t(".questions_want_to_get_started")
+      = link_to t(".contact_us"), nil, class: "btn btn-primary tryPaidButton"
 
 - modal_body = capture_haml do
   = form_for @feedback, html: { class: 'organized-form' } do |f|
     .modal-body
       .form-group.currently-hidden
-        - package_opts = plan_sizes.map { |s| ["#{s.to_s.titleize} package", s] }
-        = f.select(:package_size, package_opts, { prompt: "Choose a package size" }, { class: "form-control" })
+        - package_opts = plan_sizes.map { |s| [t(".package_title", name: s.to_s.titleize), s] }
+        = f.select(:package_size, package_opts, { prompt: t(".choose_a_package_size") }, { class: "form-control" })
       .form-group
         = f.label :name, lead_type.titleize, class: "form-label"
         = f.text_field :name, required: true, class: "form-control"
@@ -113,18 +108,21 @@
         = f.label :phone_number, class: "form-label"
         = f.text_field :phone_number, class: "form-control"
       .form-group.additional-field
-        = f.label :additional, "Additional", class: "form-label"
+        = f.label :additional, t(".additional"), class: "form-label"
         = f.text_area :additional, class: "form-control"
       .form-group
         = f.label :email, class: "form-label"
         = f.email_field :email, value: current_user&.email, required: true, class: "form-control"
+
       - if @feedback.errors.present?
         .form-group.additional-field
           = f.text_area :body,  class: "form-control", rows: 2, required: true
       - else
         = f.hidden_field :body
+
       = f.hidden_field :feedback_type, value: "lead_for_#{lead_type}"
 
-      = f.submit "Sign up", class: "btn btn-primary btn-lg"
+      = f.submit t(".sign_up"), class: "btn btn-primary btn-lg"
 
-= render partial: '/shared/modal', locals: { title: "Contact us for a free trial", id: "organizationSignupModal", modal_body: modal_body, start_open: @page_errors }
+= render partial: '/shared/modal',
+locals: { title: t(".contact_us_for_trial"), id: "organizationSignupModal", modal_body: modal_body, start_open: @page_errors }
