--- a/app/views/landing_pages/campus_packages.html.haml
+++ b/app/views/landing_pages/campus_packages.html.haml
@@ -124,5 +124,5 @@
 
       = f.submit t(".sign_up"), class: "btn btn-primary btn-lg"
 
-= render partial: '/shared/modal',
+= render partial: "/shared/modal",
 locals: { title: t(".contact_us_for_trial"), id: "organizationSignupModal", modal_body: modal_body, start_open: @page_errors }
