--- a/app/views/landing_pages/cities_packages.html.haml
+++ b/app/views/landing_pages/cities_packages.html.haml
@@ -4,9 +4,9 @@
   plans = {
     free: { cost: 0, subhead: nil },
     supporting: { cost: 499, subhead: t(".keep_us_pedaling")},
-    small: { cost: 3999, subhead: t("town") },
-    medium: { cost: 5999, subhead: t("small_city"), popular: true },
-    large: { cost: 7999, subhead: t("metropolis") },
+    small: { cost: 3999, subhead: t(".town") },
+    medium: { cost: 5999, subhead: t(".small_city"), popular: true },
+    large: { cost: 7999, subhead: t(".metropolis") },
   }
   plan_sizes = plans.keys
   plan_features = [
