--- a/app/views/landing_pages/campus_packages.html.haml
+++ b/app/views/landing_pages/campus_packages.html.haml
@@ -4,9 +4,9 @@
   plans = {
     free: { cost: 0, subhead: nil },
     supporting: { cost: 299, subhead: t(".keep_us_pedaling")},
-    small: { cost: 3999, subhead: t(".num_members", range: "0-10k") },
-    medium: { cost: 5999, subhead: t(".num_members", range: "10k-20k"), popular: true },
-    large: { cost: 8999, subhead: t(".num_members", range: "20k+") },
+    small: { cost: 3999, subhead: t(".number_of_members", range: "0-10k") },
+    medium: { cost: 5999, subhead: t(".number_of_members", range: "10k-20k"), popular: true },
+    large: { cost: 8999, subhead: t(".number_of_members", range: "20k+") },
   }
   plan_sizes = plans.keys
   plan_features = [
@@ -31,14 +31,13 @@
   %header.banner-header
     .container
       .packages-main-title
-        %h1
-          = t(".bike_index_for_colleges_universities")
+        %h1= t(".bike_index_for_colleges_universities")
         %h2
           = t(".clean_up_your_campus_messy_registry")
           %br
           = t(".all_plans_come_with_a_30day_free_trial")
       %ul.packages-price-list
-        = render partial: "/landing_pages/packages_list",
+        = render partial: "landing_pages/packages_list",
         locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: false }
 
   .container.main-compare-packages-container
@@ -84,7 +83,7 @@
 
 
     %ul.packages-price-list-small-screens
-      = render partial: "landing_pages/packages_list"
+      = render partial: "landing_pages/packages_list",
       locals: { lead_type: lead_type, plan_features: plan_features, plans: plans, render_features: true }
 
     %p.mt-4
