--- a/app/views/bikes/edit_accessories.html.haml
+++ b/app/views/bikes/edit_accessories.html.haml
@@ -1,18 +1,25 @@
 - @ctype_other_id = Ctype.other.id
 - @manufacturer_other_id = Manufacturer.other.id
+- handlebar_type_other = "other" # Because we're assigning as an enum
 = form_for @bike, multipart: true, html: { class: 'primary-edit-bike-form' } do |f|
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
       = render partial: '/bikes/edit_primary_menu'
-      .col-md-8.form-well#form_well_wrap{ data: { ctypeother: @ctype_other_id, manufacturerother: @manufacturer_other_id } }
+      .col-md-8.form-well#form_well_wrap{ data: { ctypeother: @ctype_other_id, manufacturerother: @manufacturer_other_id, handlebartypeother: handlebar_type_other } }
         .form-wrap
           .form-well-form-header
             %h3
               = @edit_templates[@edit_template]
-          .form-group.row.unnested-field.no-divider-row
-            = f.label :handlebar_type_id, class: 'form-well-label'
-            .form-well-input.fancy-select-placeholder.unfancy
-              = select(:bike, :handlebar_type, HandlebarType.select_options , { prompt: ' '})
+          .related-fields
+            .form-group.row.unnested-field.no-divider-row
+              = f.label :handlebar_type_id, class: 'form-well-label'
+              .form-well-input.fancy-select-placeholder.unfancy
+                = select(:bike, :handlebar_type, HandlebarType.select_options , { prompt: " " }, { class: "form-control handlebar-type-input" })
+            .form-group.row.hidden-other{ class: @bike.handlebar_type == "other" ? "unhidden" : "" }
+              = f.label :handlebar_type_other, "Other handlebar type", class: "form-well-label"
+              .form-well-input
+                = f.text_field :handlebar_type_other, class: "form-control"
+
           %fieldset.add-additional
             #has_multiples_parts{ data: { ids: Ctype.where(has_multiple: true).map(&:id).to_json } }
             = f.fields_for :components do |builder|
