Filepond working, drag and drop working, fixing image preview now

--- a/app/javascript/stylesheets/_admin.scss
+++ b/app/javascript/stylesheets/_admin.scss
@@ -127,3 +127,27 @@
 .admin-filter-menu {
   float: right;
 }
+
+.filepond-container {
+  .filepond--drop-label {
+    color: #4c4e53;
+  }
+
+  .filepond--label-action {
+    text-decoration-color: #babdc0;
+  }
+
+  .filepond--panel-root {
+    border-radius: 2em;
+    background-color: #edf0f4;
+    height: 1em;
+  }
+
+  .filepond--item-panel {
+    background-color: #595e68;
+  }
+
+  .filepond--drip-blob {
+    background-color: #7f8a9a;
+  }
+}
