collection of documentation fixes

--- a/app/assets/stylesheets/documentation_v2.scss
+++ b/app/assets/stylesheets/documentation_v2.scss
@@ -1,5 +1,8 @@
 // = require swagger-ui
 
+// Add table styles
+@import "revised/sections/tables";
+
 #grid-overlay {
   position: fixed;
   height: 100%;
