--- a/app/assets/stylesheets/revised/sections/_tables.scss
+++ b/app/assets/stylesheets/revised/sections/_tables.scss
@@ -1,44 +1,78 @@
-thead.sortable {
-  th {
-    font-weight: normal;
-
-    a.sortable-link {
-      display: block;
-      position: relative;
-
-      // To give a spot for the sortable direction
-      &.active {
-        padding-right: 1.5rem;
-      }
-
-      span.sortable-direction {
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
-
-      &.active {
-        font-weight: bold;
-        text-decoration: underline;
-      }
-    }
-  }
-}
-
-table .table-cell-check {
-  font-family: Courier;
-  text-align: center;
-  font-weight: bold;
-}
-
-.fullscreen-table-wrapper {
+.full-screen-table {
   // Enable scrolling
   overflow-x: scroll;
 
-  // Make it edge to edge on sm screens
-  @include media-breakpoint-down(sm) {
+  // Make it edge to edge on xs screens
+  @include media-breakpoint-down(xs) {
     margin-left: -15px;
     margin-right: -15px;
+  }
+  td ul {
+    padding: 0 0 0 1.5rem;
+    margin: 0.5rem 0 0.5rem;
+  }
+}
+
+.table-list {
+  @extend .table;
+  @extend .table-striped;
+  @extend .table-bordered;
+  @extend .table-sm;
+  tr td:first-child {
+    font-size: 80%;
+    font-style: italic;
+  }
+  tr td:first-child.full-width-data {
+    font-size: 100%;
+    font-style: normal;
+  }
+  tr td:last-child {
+    width: 85%; // This is effectively min-width for tables
+  }
+}
+
+table {
+  .table-cell-check {
+    font-family: Courier;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .less-strong-hold {
+    position: relative;
+    display: block;
+  }
+
+  .less-strong-right {
+    position: absolute;
+    right: -0.3em;
+    line-height: 1;
+    bottom: -0.2em;
+    font-size: 0.8em;
+    @extend .less-strong;
+  }
+
+  thead.sortable {
+    th {
+      font-weight: normal;
+      a.sortable-link {
+        display: block;
+        position: relative;
+        // To give a spot for the sortable direction
+        &.active {
+          padding-right: 1.5rem;
+        }
+        span.sortable-direction {
+          display: block;
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+        &.active {
+          font-weight: strong;
+          text-decoration: underline;
+        }
+      }
+    }
   }
 }
