--- a/app/views/doorkeeper/applications/show.html.haml
+++ b/app/views/doorkeeper/applications/show.html.haml
@@ -1,6 +1,8 @@
 .page-header
   %h1
-    Application: #{@application.name}
+    Application:
+    %em.header-font-uncap
+      = @application.name
 .row
   .col-md-8
     %h4
@@ -22,14 +24,14 @@
               %code
                 = uri
             %td
-              = link_to 'Authorize', oauth_authorization_path(client_id: @application.uid, redirect_uri: uri, response_type: 'code'), class: 'btn binxbtn', target: '_blank'
+              = link_to 'Authorize', oauth_authorization_path(client_id: @application.uid, redirect_uri: uri, response_type: 'code'), class: 'btn btn-secondary', target: '_blank'
   .col-md-4
     %h3 Actions
     %p
-      = link_to 'Edit', edit_oauth_application_path(@application), class: 'btn binxbtn-primary'
+      = link_to 'Edit', edit_oauth_application_path(@application), class: 'btn btn-primary'
     %p
       = render 'delete_form', application: @application
 
-%hr
-  %h2
-    Return to #{link_to "Documentation page", documentation_index_url}.
+%hr.mt-4.mb-4
+  %h2.header-font-alt
+    Return to #{link_to "Documentation page", documentation_index_url}
