--- a/app/views/doorkeeper/authorized_applications/index.html.haml
+++ b/app/views/doorkeeper/authorized_applications/index.html.haml
@@ -1,16 +1,17 @@
 %header.page-header
   %h1 Your authorized applications
 %main{:role => "main"}
-  %table.table.table-striped.table-bordered
-    %thead
-      %tr
-        %th Application
-        %th Created At
-        %th
-        %th
-    %tbody
-      - @applications.each do |application|
+  .full-screen-table
+    %table.table.table-striped.table-bordered
+      %thead
         %tr
-          %td= application.name
-          %td= application.created_at.strftime('%Y-%m-%d %H:%M:%S')
-          %td= render 'delete_form', application: application
+          %th Application
+          %th Created At
+          %th
+          %th
+      %tbody
+        - @applications.each do |application|
+          %tr
+            %td= application.name
+            %td= application.created_at.strftime('%Y-%m-%d %H:%M:%S')
+            %td= render 'delete_form', application: application
